--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -193,7 +193,7 @@
             android:layout_marginTop="@dimen/activity_margin"
             android:text="@string/shutter"
             android:textAllCaps="true"
-            android:textSize="@dimen/smaller_text_size"/>
+            android:textSize="@dimen/smaller_text_size" />
 
         <RelativeLayout
             android:id="@+id/settings_sound_holder"
@@ -244,11 +244,53 @@
         </RelativeLayout>
 
         <View
+            android:id="@+id/gps_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divider_grey"
+            android:importantForAccessibility="no" />
+
+        <com.simplemobiletools.commons.views.MyTextView
+            android:id="@+id/gps_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/bigger_margin"
+            android:layout_marginLeft="@dimen/bigger_margin"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:text="GPS"
+            android:textAllCaps="true"
+            android:textSize="@dimen/smaller_text_size" />
+
+        <RelativeLayout
+            android:id="@+id/gps_photo_tag_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:background="?attr/selectableItemBackground"
+            android:paddingLeft="@dimen/normal_margin"
+            android:paddingTop="@dimen/activity_margin"
+            android:paddingRight="@dimen/normal_margin"
+            android:paddingBottom="@dimen/activity_margin">
+
+            <com.simplemobiletools.commons.views.MySwitchCompat
+                android:id="@+id/settings_gps_toggle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:clickable="false"
+                android:paddingStart="@dimen/medium_margin"
+                android:paddingLeft="@dimen/medium_margin"
+                android:text="GPS photo tagging"
+                app:switchPadding="@dimen/medium_margin" />
+
+        </RelativeLayout>
+
+        <View
             android:id="@+id/startup_divider"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="@color/divider_grey"
-            android:importantForAccessibility="no"/>
+            android:importantForAccessibility="no" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/startup_label"
