--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,6 +135,17 @@
                 android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_clock"
                 android:visibility="visible"/>
 
+            <TextView
+                android:id="@+id/countdown_time_selected"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="0"
+                android:textColor="@color/default_text_color"
+                android:textSize="33dp"
+                android:visibility="invisible" />
 
             <ImageView
                 android:id="@+id/countdown_cancel"
@@ -330,33 +341,7 @@
         android:textColor="@android:color/white"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/countdown_time_selected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="130dp"
-        android:text=""
-        android:textColor="@color/default_text_color"
-        android:textSize="40dp"
-        android:visibility="invisible" />
 
-
-    <TextView
-        android:id="@+id/countdown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/circle_shape"
-        android:gravity="center"
-        android:padding="12dp"
-        android:text="0"
-        android:textColor="@color/default_text_color"
-        android:textSize="40dp"
-        android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/last_image"
