--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,34 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp" />
 
+    <LinearLayout
+        android:id="@+id/GPS"
+        android:layout_width="match_parent"
+        android:layout_height="228dp"
+        android:layout_alignBottom="@+id/btn_holder"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="224dp"
+        android:layout_marginBottom="279dp"
+        android:gravity="clip_vertical|center_horizontal|center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/latitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:gravity="center|center_horizontal"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/longitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center|center_horizontal"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/gridline"
         android:layout_width="match_parent"
