--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -309,6 +309,13 @@
                 android:onClick="colorEffectFilter"
                 android:padding="10dp"
                 android:text="Posterize" />
+            <Button
+                android:id="@+id/filter_blackboard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="colorEffectFilter"
+                android:padding="10dp"
+                android:text="Posterize" />
 
 
         </LinearLayout>
