--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -280,7 +280,7 @@
                 android:clickable="false"
                 android:paddingStart="@dimen/medium_margin"
                 android:paddingLeft="@dimen/medium_margin"
-                android:text="Photo location stamp"
+                android:text="Stamp photos with location address"
                 app:switchPadding="@dimen/medium_margin" />
 
         </RelativeLayout>
