--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp" />
 
+
     <LinearLayout
         android:id="@+id/GPS"
         android:layout_width="match_parent"
@@ -243,6 +244,7 @@
         android:layout_weight="1"
         android:gravity="clip_vertical|center_horizontal|center_vertical"
         android:orientation="horizontal"
+        android:background="#aaaaaa"
         android:visibility="visible" />
 
     <HorizontalScrollView
