--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -222,6 +222,15 @@
             android:visibility="visible" />
 
         <ImageView
+                android:id="@+id/share"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_alignParentRight="true"
+                android:layout_weight="1"
+                android:padding="@dimen/normal_margin"
+                android:src="@drawable/ic_share"/>
+
+        <ImageView
             android:id="@+id/settings"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
@@ -229,7 +238,6 @@
             android:layout_weight="1"
             android:padding="@dimen/normal_margin"
             android:src="@drawable/ic_settings_cog" />
-
 
     </LinearLayout>
 
@@ -292,6 +300,10 @@
                 android:padding="10dp"
                 android:text="Sepia" />
 
+            <Button
+                    android:text="Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/button" android:layout_weight="1"/>
             <Button
                 android:id="@+id/filter_solarize"
                 android:layout_width="wrap_content"
