[#125] Added caption button on top bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -224,6 +224,16 @@
             android:src="@drawable/ic_flash_off" />
 
         <ImageView
+            android:id="@+id/caption_button"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:layout_alignParentRight="true"
+            android:layout_weight="1"
+            android:padding="@dimen/normal_margin"
+            android:src="@drawable/ic_caption"
+            android:visibility="visible" />
+
+        <ImageView
             android:id="@+id/change_resolution"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
