[#126] Added TextInputLayout to enter caption. Need to implement to make it invisible

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,6 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-    <LinearLayout
-        android:id="@+id/caption_holder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
-        android:orientation="horizontal">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="ENTER CAPTION"
-                android:textColor="@color/white"
-                android:textColorHighlight="@color/white"
-                android:textColorHint="@color/white"
-                android:textColorLink="@color/common_google_signin_btn_text_dark_focused" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
-
     <com.simplemobiletools.camera.views.AutoFitTextureView
         android:id="@+id/camera_texture_view"
         android:layout_width="wrap_content"
@@ -43,16 +19,30 @@
         android:layout_marginEnd="0dp" />
 
     <LinearLayout
-        android:id="@+id/GPS"
+        android:id="@+id/caption_holder"
         android:layout_width="match_parent"
-        android:layout_height="228dp"
-        android:layout_alignBottom="@+id/btn_holder"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="224dp"
-        android:layout_marginBottom="279dp"
-        android:gravity="clip_vertical|center_horizontal|center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="473dp"
+        android:layout_above="@+id/btn_holder"
+        android:layout_alignTop="@+id/btn_bar"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="100dp"
+        android:orientation="horizontal"
+        android:visibility="invisible">
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/caption_layout"
+            android:layout_width="match_parent"
+            android:layout_height="250dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/caption_input"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/enter_caption"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
