--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
+    <style name="CaptionHintColor" parent="AppTheme.Base">
+        <item name="colorAccent">@color/white</item>
+    </style>
+
 </resources>
